# tinyusdz

./: .cirrus.yml  .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  LICENSE  MANIFEST.in  README.md  azure-pipelines.yml  ci-build-python-lib.bat  index.html  lgtm.yaml  meson.build  pyproject.toml  setup.py  vcsetup-2017.bat  vcsetup-with-python.bat
.github/: FUNDING.yml
.github/workflows/: android_ci.yml  ccpp.yml  codeql-analysis.yml  ios_ci.yml  linux_ci.yml  macos_ci.yml  msvc.yml  static.yml  wheels.yml  windows_arm_ci.yml  windows_ci.yml
android/: README.md  build.gradle
android/app/: build.gradle
android/app/src/main/cpp/: CMakeLists.txt  hello-tinyusdz.cc  jni-tinyusdz.cc  render-ctx.cc  render-ctx.hh
benchmarks/: benchmark-main.cc
cmake/: aarch64-linux-gnu.toolchain
doc/: composition.md  preview_surface.md  prim_format.md  status.md  usdObj.md  usdc_format.md  usdz_note.md
examples/api_tutorial/: api-tutorial-main.cc
examples/asset_resolution/: asset-resolution-example.cc
examples/c_api_example/: c-api-example-main.c
examples/common/: README.sdl2  viewport_camera.hh
examples/file_format/: file-format-example.cc
examples/openglviewer/: CMakeLists.txt  README.md  main.cc  shader.cc  shader.hh
examples/openglviewer/shaders/: base_color_map.frag_inc.hh  draw_debug_color.frag_inc.hh  emissive_map.frag_inc.hh  metallic_roughness_map.frag_inc.hh  no_skinning.vert  no_skinning.vert_inc.hh  normal_map.frag_inc.hh  normals.frag_inc.hh  occlusion_map.frag_inc.hh  pbr_metallic_roughness.frag_inc.hh  perturbed_normal.frag_inc.hh  unlit.frag_inc.hh  usdpreviewsurface.frag  usdpreviewsurface.frag_inc.hh  vertex_color.frag_inc.hh  weights.frag_inc.hh  world_fragment.frag_inc.hh
examples/optixviewer/: CMakeLists.txt  README.md  bootstrap-linux.sh  main.cc
examples/pxrusd/: CMakeLists.txt  README.md  bootstrap-linux.sh  main.cc
examples/save_usda/: CMakeLists.txt  main.cc
examples/sdlviewer/: CMakeLists.txt  README.md  gui.cc  gui.hh  main.cc  simple-render.cc  simple-render.hh
examples/simple_dump/: CMakeLists.txt  README.md  main.cc
examples/simple_usdz_dump/: CMakeLists.txt  main.cc
examples/traycast/: CMakeLists.txt  README.md  traycast-main.cc
examples/tusdcat/: README.md  main.cc
examples/tydra_api/: tydra-api-main.cc
examples/tydra_convert/: CMakeLists.txt  README.md  tydra-convert-main.cc
examples/tydra_to_renderscene/: to-renderscene-main.cc
examples/usd_to_gltf/: CMakeLists.txt  README.md  to-gltf-main.cc
examples/usda_parser/: parser-main.cc
examples/usdc_parser/: usdc-parser-main.cc
examples/usdz_to_json/: usdz_to_json-main.cc
examples/vulkan_raytrace/: CMakeLists.txt  README.md
experimental/serialize/: Makefile  README.md  serializer.cc  usdc_serializer.hh
models/: blendshape-and-animation-test-001.usda  cube-indexed-primvar-timesampled.usda  cube-indexed-primvar.usda  facevarying-normal-test.usda  geomsubset-001.usda  geomsubset-material-001.usda  reference-geom-001.usda  simple-blendshape-test-001.usda  simple-skin-test-002.usda  skintest-blender-4.1.usda  smooth-normal-test.usda  tetra-with-normals.usda  texture-cat-plane-token-var.usda  texture-channel-001.usda  texture-plane-indexed-primvar-uv-timesampled-002.usda  texture-plane-indexed-primvar-uv-timesampled.usda  texture-plane-indexed-primvar-uv.usda  translated-cube-001.usda  tri-torus-shared-normal.usda  usdObj-001.usda  uv-quad-textured.usda  uv-tex-facevarying-002.usda  uv-tex-facevarying.usda  uv-tri-quad-textured.usda
python/: README.md  setup.py  test.py  tutorial.py
python/tinyusdz/: __init__.py  _version.py  prims.py  usd_loader.py  version.py
sandbox/ascii-parser-gen/: Makefile
sandbox/emscripten/: README.md
sandbox/fmt/: Makefile
sandbox/js/: Makefile  package-lock.json
sandbox/materialx/: Makefile  materialx-main.cc
sandbox/primvar_type/: Makefile  main.cc
sandbox/python/: README.md  ctinyusd.py  ctinyusd_test.py  gen-ctypes.sh  load_test.py  prim.py  value_test.py
sandbox/reflection/: Primitives.cpp  main.cc
sandbox/rust-pure-usd/: Cargo.toml  Makefile  README.md
sandbox/simple_variant/: Makefile  main.cc
sandbox/threejs/: CMakeLists.txt  Makefile  README.md  TinyUSDZLoader.js  binding.cc  bootstrap-emscripten-linux.sh  loader_test.ts  test-node.js
sandbox/token-impl/: Makefile
sandbox/wasi/: CMakeLists.txt  README.md  README.txt  bootstrap-wasi.sh  main.cc
scripts/: bootstrap-aarch64-ios.sh  bootstrap-android-cmake-linux.sh  bootstrap-cmake-linux-32bit.sh  bootstrap-cmake-linux-mindep.sh  bootstrap-cmake-linux-with-osd.sh  bootstrap-cmake-linux.sh  bootstrap-cmake-mingw-win.sh  bootstrap-gcc-4.8.sh  bootstrap-gcc-4.9.sh  ci-build-python-lib.sh
src/: ascii-parser-basetype.cc  ascii-parser-timesamples-array.cc  ascii-parser-timesamples.cc  ascii-parser.cc  ascii-parser.hh  asset-resolution.cc  asset-resolution.hh  c-tinyusd.cc  c-tinyusd.h  common-macros.inc  composition.cc  composition.hh  crate-file.cc  crate-format.cc  crate-format.hh  crate-pprint.cc  crate-pprint.hh  crate-reader.cc  crate-reader.hh  crate-writer.cc  define-type-trait.inc  handle-allocator.hh  image-loader.cc  image-loader.hh  image-types.hh  image-util.cc  image-util.hh  image-writer.cc  image-writer.hh  io-util.cc  io-util.hh  json-util.cc  json-util.hh  linear-algebra.cc  linear-algebra.hh  lz4-compression.cc  main.cc  math-util.inc  path-util.cc  path-util.hh  (+78 more)
tests/: test-main.cc
tests/fuzzer/: README.md  alac_decoding_fuzzmain.cc  intCoding_fuzzmain.cc  meson.build  pathutil_fuzzmain.cc  tinyusdz_fuzzmain.cc  usdaparser_fuzzmain.cc  usdcparser_fuzzmain.cc  wuffs_jpeg_decoding_fuzzmain.cc
tests/unit/: CMakeLists.txt  acutest.h  unit-common.hh  unit-customdata.cc  unit-main.cc  unit-pathutil.cc  unit-pprint.cc  unit-pprint.h  unit-prim-types.cc  unit-prim-types.h  unit-primvar.cc  unit-pxr-compat-api.cc  unit-strutil.cc  unit-timesamples.cc  unit-timesamples.h  unit-value-types.cc  unit-xform.cc
web/: CMakeLists.txt
web/demo/: README.md  download_asset.sh  index.html  main.js
(+189 files in other folders)
